tests/samples/invalid/AssignAchievement.py
# cases where AssignAchievement should not unlock

# >> CASE

# technically this isn't allowed, but we're only really
# checking syntax here, nothing else
x

# >> CASE
print(x)
